fixed logo alignment

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,2 +1,6 @@
 $header-logo-height: 20px
 $header-logo-height-desktop: 19px
+
+// New variable
+$header-height: 27px
+$header-height-desktop: 30px
